--- a/styles/variables.css
+++ b/styles/variables.css
@@ -115,3 +115,113 @@ hr.header-underline{
 .gap-2{
     gap: 0.5rem;
 }
+
+h2{
+    font-size: clamp(14px, 2vw + 1rem, 22px);
+    font-weight: 600;
+}
+
+.icon{
+    aspect-ratio: 1/1;
+}
+
+.icon-lg{
+    line-height: 1;
+    font-size: clamp(1.5rem, 2.5vw + 1rem, 3rem);
+}
+
+.icon-md{
+    line-height: 1;
+    font-size: 1.5rem;
+}
+
+.icon-md-lg{
+    font-size: 2.5rem;
+}
+
+.small{
+    font-size: 12px!important;
+}
+
+.flex-gap{
+    gap: clamp(24px, 32px, 32px);
+}
+
+.top-16{
+    top: 16px;
+}
+
+.br-1{
+    border-radius: 0.75rem;
+}
+
+.h3{
+    font-size: clamp(16px, 2vw + 1rem, 22px);
+    font-weight: 600;
+}
+
+.pill-container{
+    border-radius: 2rem;
+    background-color: #E5E5E5;
+    padding: 8px;
+    font-size: 12px;
+    font-weight: 500;
+    color: var(--primary-color);
+    transition: all 0.3s ease;
+}
+
+.pill-container:hover{
+    background-color: var(--primary-color);
+    color: #fff;
+    transition: all 0.3s ease;
+}
+
+.divider{
+    width: 100%;
+    height: 4px;
+    background-color: #E5E5E5;
+    border-radius: 4px;
+    margin: 2rem 0;
+}
+
+
+.divider{
+    width: 100%;
+    height: 4px;
+    background-color: #E5E5E5;
+    border-radius: 4px;
+    margin: 2rem 0;
+}
+
+@media (max-width: 992px) {
+    .navbar-collapse {
+        margin-top: 1rem;
+    }
+}
+
+.navbar-toggler-icon {
+    background-image: none!important;
+}
+
+.navbar-toggler-icon::before{
+    color: #fff;
+    content: "\2630";
+    font-size: 1.75rem;
+}
+
+.navbar-toggler:focus{
+    box-shadow: none!important;
+    border: none!important;
+}
+
+.navbar-toggler{
+    border: none!important;
+}
+
+.navbar-toggler-icon{
+    color: #fff;
+}
+
+input::placeholder, textarea::placeholder {
+    opacity: 0.4!important; /* Ensures the color is fully opaque */
+}
