--- a/styles/variables.css
+++ b/styles/variables.css
@@ -76,6 +76,10 @@ hr.header-underline{
     border-radius: 0.5rem;
 }
 
+.gap-x-1{
+    gap: 0.5rem;
+}
+
 .gap-x-3{
     gap: 2rem;
 }
@@ -230,4 +234,8 @@ input::placeholder, textarea::placeholder {
     .position-lg-static{
         position: static!important;
     }
+}
+
+.w-fit-content{
+    width: fit-content;
 }
