--- a/templates/resume.html
+++ b/templates/resume.html
@@ -43,8 +43,8 @@
         </div>
     </div>
 
-    <div>
-        <div class="portfolio-container mb-4">
+    <div class="w-100">
+        <div class="portfolio-container mb-4 w-100">
             <h1>Education</h1>
             <hr class="header-underline">
             <div class="portfolio-container">
@@ -58,43 +58,92 @@
                 </div>
             </div>
         </div>
-        <div class="portfolio-container mb-4">
+        <div class="portfolio-container mb-4 w-100">
             <h1>Software Skills</h1>
             <hr class="header-underline">
-            <div class="d-flex flex-column">
-                <div class="d-flex flex-column flex-lg-row flex-nowrap flex-gap mb-4">
-                    <div class="w-100 portfolio-container d-flex flex-column flex-md-row align-items-start gap-2">
-                        <i class="icon icon-lg mr-2 ion-md-code text-primary"></i>
-                        <div>
-                            <h2 class="text-primary">Software Development</h2>
-                            <p>I develop backend systems and infrastructures, ensuring apps are efficient, scalable, and built on solid foundations.</p>
-                        </div>
-                    </div>
 
-                    <div class="w-100 portfolio-container d-flex flex-column flex-md-row align-items-start gap-2">
-                        <i class="icon icon-lg mr-2 ion-md-clipboard text-primary"></i>
-                        <div>
-                            <h2 class="text-primary">UX Design</h2>
-                            <p>I design user-friendly experiences, crafting intuitive interfaces and workflows that make apps easy and enjoyable to use.</p>
-                        </div>
+            <div class="portfolio-container p-4">
+                <h2 class="text-primary">My Skills</h2>
+                
+                <div class="d-flex flex-row flex-wrap gap-x-1">
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-html5 text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">HTML</p>
                     </div>
-                </div>
-
-                <div class="d-flex flex-column flex-lg-row flex-nowrap flex-gap">
-                    <div class="w-100 portfolio-container d-flex flex-column flex-md-row align-items-start gap-2">
-                        <i class="icon icon-lg mr-2 ion-logo-wordpress text-primary"></i>
-                        <div>
-                            <h2 class="text-primary">WordPress Site Design</h2>
-                            <p>I create visually appealing and functional WordPress sites, tailoring designs to meet user needs and deliver engaging web experiences.</p>
-                        </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-css3 text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">CSS</p>
                     </div>
-
-                    <div class="w-100 portfolio-container d-flex flex-column flex-md-row align-items-start gap-2">
-                        <i class="icon icon-lg mr-2 ion-ios-phone-portrait text-primary"></i>
-                        <div>
-                            <h2 class="text-primary">App Design</h2>
-                            <p>I build apps from scratch, focusing on creating, deploying, and refining tools that meet user needs and enhance functionality.</p>
-                        </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-javascript text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">JavaScript</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-react text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">React</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-python text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Django</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-nodejs text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Node.js</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-nginx text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Nginx</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-apache text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Apache</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-firebase text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Firebase</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-postgresql text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">PostgreSQL</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-aws text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">AWS</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-github text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">GitHub</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-wordpress text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">WordPress</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-expo text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Expo React Native</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-heroku text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Heroku</p>
+                    </div>
+                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-graphql text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">GraphQL</p>
                     </div>
                 </div>
             </div>
