added to resume page

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -62,88 +62,132 @@
             <h1>Software Skills</h1>
             <hr class="header-underline">
 
-            <div class="portfolio-container p-4">
-                <h2 class="text-primary">My Skills</h2>
+            <div class="portfolio-container p-4 mb-4">
+                <h2 class="text-primary mb-3">Frontend</h2>
                 
-                <div class="d-flex flex-row flex-wrap gap-x-1">
+                <div class="d-flex flex-row flex-wrap gap-x-1 zoom-out-on-md">
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
                         <i class="icon ion-logo-html5 text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">HTML</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
                         <i class="icon ion-logo-css3 text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">CSS</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
                         <i class="icon ion-logo-javascript text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">JavaScript</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
-                        <i class="icon ion-logo-react text-primary icon-md mr-1 w-fit-content"></i>
-                        <p class="mb-0">React</p>
+                        <i class="icon ion-logo-javascript text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">jQuery</p>
                     </div>
-                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-javascript text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">TypeScript</p>
+                    </div>
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-javascript text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">React JS</p>
+                    </div>
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-javascript text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">React Native</p>
+                    </div>
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-python text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Django Template</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="portfolio-container p-4 mb-4">
+                <h2 class="text-primary mb-3">Backend</h2>
+                
+                <div class="d-flex flex-row flex-wrap gap-x-1 zoom-out-on-md">
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
                         <i class="icon ion-logo-python text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">Django</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
                         <i class="icon ion-logo-nodejs text-primary icon-md mr-1 w-fit-content"></i>
-                        <p class="mb-0">Node.js</p>
+                        <p class="mb-0">Node JS</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
-                        <i class="icon ion-logo-nginx text-primary icon-md mr-1 w-fit-content"></i>
+                        <i class="icon ion-md-swap text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">Nginx</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
-                        <i class="icon ion-logo-apache text-primary icon-md mr-1 w-fit-content"></i>
+                        <i class="icon ion-md-swap text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">Apache</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
-                        <i class="icon ion-logo-firebase text-primary icon-md mr-1 w-fit-content"></i>
+                        <i class="icon ion-md-swap text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">Firebase</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
-                        <i class="icon ion-logo-postgresql text-primary icon-md mr-1 w-fit-content"></i>
+                        <i class="icon ion-ios-cloud text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">AWS EC2</p>
+                    </div>
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-ios-cloud text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">AWS ALB</p>
+                    </div>
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-ios-cloud text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">AWS Lightsail</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-container p-4 mb-4">
+                <h2 class="text-primary mb-3">Servers/Databases</h2>
+                
+                <div class="d-flex flex-row flex-wrap gap-x-1 zoom-out-on-md">
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-md-cube text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">NoSQL</p>
+                    </div>
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-md-cube text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">PostgreSQL</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
-                        <i class="icon ion-logo-aws text-primary icon-md mr-1 w-fit-content"></i>
+                        <i class="icon ion-md-cube text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">GraphQL</p>
+                    </div>
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-md-cloud text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">AWS S3</p>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-container p-4 mb-4">
+                <h2 class="text-primary mb-3">Infrastructure</h2>
+                
+                <div class="d-flex flex-row flex-wrap gap-x-1 zoom-out-on-md">
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-md-cloud text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">AWS</p>
                     </div>
-                    
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-codepen text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Heroku</p>
+                    </div>
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-md-swap text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Firebase</p>
+                    </div>
+                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
+                        <i class="icon ion-logo-apple text-primary icon-md mr-1 w-fit-content"></i>
+                        <p class="mb-0">Expo React Native</p>
+                    </div>
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
                         <i class="icon ion-logo-github text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">GitHub</p>
                     </div>
-                    
                     <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
                         <i class="icon ion-logo-wordpress text-primary icon-md mr-1 w-fit-content"></i>
                         <p class="mb-0">WordPress</p>
-                    </div>
-                    
-                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
-                        <i class="icon ion-logo-expo text-primary icon-md mr-1 w-fit-content"></i>
-                        <p class="mb-0">Expo React Native</p>
-                    </div>
-                    
-                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
-                        <i class="icon ion-logo-heroku text-primary icon-md mr-1 w-fit-content"></i>
-                        <p class="mb-0">Heroku</p>
-                    </div>
-                    
-                    <div class="portfolio-container p-3 d-flex flex-row flex-nowrap gap-2 align-items-center w-fit-content">
-                        <i class="icon ion-logo-graphql text-primary icon-md mr-1 w-fit-content"></i>
-                        <p class="mb-0">GraphQL</p>
                     </div>
                 </div>
             </div>
