--- a/styles/variables.css
+++ b/styles/variables.css
@@ -203,6 +203,12 @@ h2{
     }
 }
 
+@media (max-width: 992px) {
+    .zoom-out-on-md {
+        zoom: 0.75;
+    }
+}
+
 .navbar-toggler-icon {
     background-image: none!important;
 }
