--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,7 +8,20 @@
     --font-size: 16px;
     --background-color: #F2F7FF;
     --text-color: #333;
+    --container-background-color: #fff;
+    --container-border-color: #E5E5E5;
 }
+
+/* @media (prefers-color-scheme: dark) {
+    :root {
+        --background-color: #171717;
+        --text-color: #fff;
+        --container-background-color: #242424;
+        --container-border-color: #404040;
+        --text-heading: #f5f5f5;
+    }
+} */
+
 
 body{
     font-family: var(--font-family);
@@ -54,9 +67,9 @@ p{
 
 .portfolio-container {
     border-radius: 0.75rem;
-    background-color: #fff;
+    background-color: var(--container-background-color);
     padding: 40px;
-    border: 1px solid rgba(154, 168, 188, 0.4);
+    border: 1px solid var(--container-border-color);
     box-shadow: 0 4px 8px 0 rgba(154, 168, 188, 0.4);
 }
 
@@ -248,4 +261,13 @@ input::placeholder, textarea::placeholder {
 
 .w-fit-content{
     width: fit-content;
+}
+
+.spin{
+    animation: spin 2s ease-in-out infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
