added img to home screen

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column flex-lg-row gap-x-3">
-    <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center position-sticky top-16">
+    <div class="d-flex portfolio-container h-100 flex-column align-items-center position-lg-sticky top-16">
         <div class="portfolio-container p-0 overflow-hidden mb-4">
             <img src="images/profile.jpg" class="br-1" alt="Profile Picture" style="width: 200px; height: 200px;">
         </div>
