added logos to the portfolio page

--- a/templates/about.html
+++ b/templates/about.html
@@ -47,7 +47,7 @@
             <h1>About Me</h1>
             <hr class="header-underline">
             <p class="mb-4">I believe technology has the power to <span class="text-primary">transform</span> how we live and work. I aim to build tools that <span class="text-primary">inspire productivity</span>, simplify daily life, and empower users to <span class="text-primary">reach their potential</span>. My work is driven by a vision to <span class="text-primary">merge design and functionality</span> into solutions that truly make a difference</p>
-            <a class="btn btn-primary btn-lg" href="portfolio.html">View my work</a>
+            <a class="btn btn-primary btn-lg" href="/#/portfolio">View my work</a>
         </div>
         <div class="portfolio-container mb-4">
             <h1>What I'm Doing</h1>
