--- a/styles/variables.css
+++ b/styles/variables.css
@@ -190,12 +190,12 @@ h2{
     color: var(--primary-color);
     transition: all 0.3s ease;
 }
-
+/* 
 .pill-container:hover{
     background-color: var(--primary-color);
     color: #fff;
     transition: all 0.3s ease;
-}
+} */
 
 .divider{
     width: 100%;
@@ -275,3 +275,37 @@ input::placeholder, textarea::placeholder {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.portfolio-image{
+    object-fit: cover;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    width: 100%;
+    height: 80px;
+}
+
+.portfolio-logo-image{
+    width: 100%;
+    height: 100%;
+    max-width: 124px;
+    object-fit: contain;
+}
+
+@media (max-width: 480px) {
+    #logos-container{
+        flex-wrap: nowrap!important;    
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch;
+        padding-bottom: 2rem;
+    }
+    .portfolio-logo-image{
+        width: auto!important;
+    }
+
+    #logos-container > .portfolio-container{
+        scroll-snap-align: start;
+        flex-shrink: 0;
+    }
+}
+
