Added animations for the containers on the page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-container w-100">
+    <div class="portfolio-container w-100 animate__animated animate__backInUp">
         <div class="portfolio-container mb-4 p-0 br-1" style="overflow: hidden;">
             <a href="https://www.google.com/maps/place/Hoboken,+NJ/@40.744121,-74.032354,14z/data=!3m1!4b1!4m5!3m4!1s0x89c250b5a4b3c5d3:0x3a2f4f3f6f7f8g9!8m2!3d40.744121!4d-74.032354" target="_blank" rel="noopener noreferrer">
                 <img src="../images/hoboken.jpg" alt="Hoboken, NJ on Map" style="width: 100%; height: auto; max-height: 10rem; object-fit: cover;">
