--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="w-100">
-        <div class="portfolio-container mb-4">
+        <div class="portfolio-container mb-4 animate__animated animate__backInUp">
             <!-- Logos -->
             <h1>Logos</h1>
             <hr class="header-underline mb-4">
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="portfolio-container">
+        <div class="portfolio-container animate__animated animate__backInUp">
             <!-- Projects -->
             <h1>Software Projects</h1>
             <hr class="header-underline mb-4">
