--- a/templates/resume.html
+++ b/templates/resume.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="w-100">
-        <div class="portfolio-container mb-4 w-100">
+        <div class="portfolio-container mb-4 w-100 animate__animated animate__backInUp">
             <h1>Education</h1>
             <hr class="header-underline">
             <div class="portfolio-container">
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </div>
-        <div class="portfolio-container mb-4 w-100">
+        <div class="portfolio-container mb-4 w-100 animate__animated animate__backInUp">
             <h1>Software Skills</h1>
             <hr class="header-underline">
 
