--- a/styles/variables.css
+++ b/styles/variables.css
@@ -309,3 +309,8 @@ input::placeholder, textarea::placeholder {
     }
 }
 
+.animate__animated{
+    animation-duration: 0.6s!important;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1)!important;
+}
+
