--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,44 +1,22 @@
 <div class="d-flex flex-column flex-lg-row gap-x-3">
     <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center position-lg-sticky top-16">
-        <div class="portfolio-container p-0 overflow-hidden mb-4">
-            <img src="images/profile.jpg" class="br-1" alt="Profile Picture" style="width: 200px; height: 200px;">
-        </div>
-        <h3 class="text-center">Dylan&nbsp;Landman</h3>
-        <div class="d-flex flex-row flex-nowrap gap-2 align-items-center justify-content-center">
-            <div class="pill-container">Software&nbsp;Developer</div>
-            <div class="pill-container">Web&nbsp;Developer</div>
-        </div>
-        <div class="divider"></div>
-
-        <div class="d-flex flex-column flex-nowrap gap-3 justify-content-start">
-            <div class="d-flex flex-row flex-nowrap align-items-center mb-3" style="width: 100%;">
-                <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
-                    <i class="icon ion-md-mail text-primary icon-md"></i>
-                </div>
-                <div>
-                    <p class="text-primary mb-0 small mb-2" >EMAIL</p>
-                    <p class="text-secondary mb-0 fs-14">dylanlandman@gmail.com</p>
-                </div>
+        <div class="portfolio-filter" style="min-width: 18rem;">
+            <h4 class="mb-4"><i class="icon ion-md-funnel"></i> Filters</h4>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="software-projects" value="Software Projects">
+                <label class="form-check-label" for="software-projects">Software Projects</label>
             </div>
-
-            <div class="d-flex flex-row flex-nowrap align-items-center mb-3">
-                <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
-                    <i class="icon ion-md-call text-primary icon-md"></i>
-                </div>
-                <div>
-                    <p class="text-primary mb-0 small mb-2">PHONE #</p>
-                    <p class="text-secondary mb-0 fs-14">+1 (516) 514-2959</p>
-                </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="logos" value="Logos">
+                <label class="form-check-label" for="logos">Logos</label>
             </div>
-
-            <div class="d-flex flex-row flex-nowrap align-items-center">
-                <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
-                    <i class="icon ion-md-pin text-primary icon-md"></i>
-                </div>
-                <div>
-                    <p class="text-primary mb-0 small mb-2">LOCATION</p>
-                    <p class="text-secondary mb-0 fs-14">Hoboken, NJ</p>
-                </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="web-development" value="Web Development">
+                <label class="form-check-label" for="web-development">Web Development</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="ux-design" value="UX Design">
+                <label class="form-check-label" for="ux-design">UX Design</label>
             </div>
         </div>
     </div>
@@ -48,10 +26,17 @@
             <h1>Logos</h1>
             <hr class="header-underline mb-4">
             <div id="logos-container" class="d-flex flex-row flex-wrap gap-x-3 mb-3">
-                <div class="portfolio-container"><img src="images/portfolio/logos/516.jpg" alt="516" class="portfolio-logo-image"></div>
-                <div class="portfolio-container"><img src="images/portfolio/logos/dl-logo.png" alt="516" class="portfolio-logo-image"></div>
-                <div class="portfolio-container"><img src="images/portfolio/logos/METNY.jpg" alt="516" class="portfolio-logo-image"></div>
-                <div class="portfolio-container"><img src="images/portfolio/logos/NYITCOM.png" alt="516" class="portfolio-logo-image"></div>
+                <a rel="lightbox" href="images/portfolio/logos/516.jpg">
+                    <div class="portfolio-container"><img src="images/portfolio/logos/516.jpg" alt="516" class="my-lightbox-toggle portfolio-logo-image"></div>
+                </a>
+                <a rel="lightbox" href="images/portfolio/logos/dl-logo.png">
+                    <div class="portfolio-container"><img src="images/portfolio/logos/dl-logo.png" alt="516" class="my-lightbox-toggle portfolio-logo-image"></div>
+                </a>
+                <a rel="lightbox" href="images/portfolio/logos/METNY.jpg">
+                    <div class="portfolio-container"><img src="images/portfolio/logos/METNY.jpg" alt="516" class="my-lightbox-toggle portfolio-logo-image"></div>
+                </a>
+                <a rel="lightbox" href="images/portfolio/logos/NYITCOM.png">
+                    <div class="portfolio-container"><img src="images/portfolio/logos/NYITCOM.png" alt="516" class="my-lightbox-toggle portfolio-logo-image"></div>
             </div>
         </div>
 
@@ -75,28 +60,3 @@
         </div>
     </div>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-
-<script>
-    $(document).ready(function() {
-        console.log('READY');
-        const logos = [
-            '516.jpg',
-            'logo2.png',
-            'logo3.png'
-        ];
-
-        console.log('LOGOS', logos);
-
-        // Loop through each logo and append it to the content container
-        logos.forEach(function(logo) {
-            const url = `images/portfolio/logos/${logo}`;
-            console.log(url);
-            $('#content-container').append(
-                `<img src="${url}" alt="${logo}" class="logo-image">`
-            );
-        });
-    });
-</script>
