--- a/styles/lightbox.css
+++ b/styles/lightbox.css
@@ -14,7 +14,7 @@ body.lb-disable-scrolling {
   }
   
   .lightbox {
-    position: absolute;
+    position: fixed;
     width: 100%;
     z-index: 10000;
     text-align: center;
@@ -45,7 +45,9 @@ body.lb-disable-scrolling {
     position: relative;
     max-width: 100%!important;
     margin: 0 auto;
-    border-radius: 4px;
+    border-radius: 24px;
+    box-shadow: 0 4px 8px 0 rgba(50, 50, 50, 0.4);
+    border: 1px solid var(--container-border-color);
   
     /* Background color behind image.
        This is visible during transitions. */
@@ -113,7 +115,7 @@ body.lb-disable-scrolling {
     -webkit-transition: opacity 0.4s;
     -moz-transition: opacity 0.4s;
     -o-transition: opacity 0.4s;
-    transition: opacity 0.4s;
+    transition: opacity 0s;
   }
   
   .lb-nav a.lb-prev:hover {
@@ -153,6 +155,7 @@ body.lb-disable-scrolling {
   .lb-data {
     padding: 0 4px;
     color: #ccc;
+    display: none;
   }
   
   .lb-data .lb-details {
