--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -2,21 +2,23 @@
     <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center position-lg-sticky top-16">
         <div class="portfolio-filter" style="min-width: 18rem;">
             <h4 class="mb-4"><i class="icon ion-md-funnel"></i> Filters</h4>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="software-projects" value="Software Projects">
-                <label class="form-check-label" for="software-projects">Software Projects</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="logos" value="Logos">
-                <label class="form-check-label" for="logos">Logos</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="web-development" value="Web Development">
-                <label class="form-check-label" for="web-development">Web Development</label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="ux-design" value="UX Design">
-                <label class="form-check-label" for="ux-design">UX Design</label>
+            <div class="d-flex flex-column gap-y-2">
+                <div class="form-check checkbox-container">
+                    <input class="form-check-input customCheckbox" type="checkbox" id="software-projects" value="Software Projects" checked>
+                    <label class="form-check-label" for="software-projects">Software Projects</label>
+                </div>
+                <div class="form-check checkbox-container">
+                    <input class="form-check-input customCheckbox" type="checkbox" id="logos" value="Logos" checked>
+                    <label class="form-check-label" for="logos">Logos</label>
+                </div>
+                <div class="form-check checkbox-container">
+                    <input class="form-check-input customCheckbox" type="checkbox" id="web-development" value="Web Development" checked>
+                    <label class="form-check-label" for="web-development">Web Development</label>
+                </div>
+                <div class="form-check checkbox-container">
+                    <input class="form-check-input customCheckbox" type="checkbox" id="ux-design" value="UX Design" checked>
+                    <label class="form-check-label" for="ux-design">UX Design</label>
+                </div>
             </div>
         </div>
     </div>
