--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,7 +1,9 @@
 <div class="d-flex flex-column flex-lg-row gap-x-3">
     <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center position-lg-sticky top-16">
         <div class="portfolio-filter" style="min-width: 18rem;">
-            <h4 class="mb-4"><i class="icon ion-md-funnel"></i> Filters</h4>
+            <h4>Explore My Portfolio</h4>
+            <p style="max-width: 20rem;" class="mb-4">Discover my diverse range of projects, showcasing my skills in <span class="text-primary">software development</span>, <span class="text-primary">logo design</span>, <span class="text-primary">web development</span>, and <span class="text-primary">user experience design</span>.</p>
+            <div class="divider"></div>
             <div class="d-flex flex-column gap-y-2">
                 <div class="form-check checkbox-container">
                     <input class="form-check-input customCheckbox" type="checkbox" id="software-projects" value="Software Projects" checked>
