--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,5 +1,4 @@
 <div class="d-flex flex-column flex-lg-row gap-x-3">
-    
     <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center position-lg-sticky top-16">
         <div class="portfolio-filter" style="min-width: 18rem;">
             <h4>Explore My Portfolio</h4>
@@ -164,6 +163,10 @@
                     <div class="p-4">
                         <h2>Reimagining the Virtual Classroom: Enhancing Engagement and Student-Teacher Interaction in the Digital Age</h2>
                         <hr class="header-underline mb-3">
+                        <div class="d-flex flex-wrap align-items-center gap-x-1 mb-2">
+                            <small class="pill-container mb-2" ><i class="icon ion-md-globe pill"></i> Research Paper</small>
+                            <small class="pill-container mb-2" ><i class="icon ion-md-book pill"></i> Published</small>
+                        </div>
                         <p>Virtual classrooms have remained popular post-COVID-19 due to benefits like accessibility and safety. However, they face challenges such as limited student-teacher interaction, mismatched expectations, and difficulties in assessing student understanding. This work reviews current virtual classroom systems addressing these issues and proposes solutions inspired by the success of physical classrooms to enhance engagement and interactivity in online learning.</p>
                         <a href="https://dl.acm.org/doi/abs/10.1145/3591196.3596617" target="_blank" class="btn btn-primary mb-2"><i class="icon ion-md-arrow-round-forward"></i> View Research Paper</a>
                     </div>
