--- a/styles/variables.css
+++ b/styles/variables.css
@@ -320,7 +320,7 @@ input::placeholder, textarea::placeholder {
 
 .animate__animated{
     animation-duration: 0.5s!important;
-    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1)!important;
+    transition-timing-function: ease-out!important;
 }
 
 .custom-checkbox{
