--- a/templates/contact.html
+++ b/templates/contact.html
@@ -69,7 +69,7 @@
 
             <p class="mb-4">I’m always open to discussing exciting job opportunities, potential collaborations, or any creative projects you have in mind. Whether you’re looking for a skilled developer, a UX designer, or someone to bring your vision to life, feel free to reach out—I’d love to connect!</p>
 
-            <div class="portfolio-container">
+            <div class="contact-form-container">
                 <form id="contact-form">
                     <div class="row">
                         <div class="col-12 col-lg-6">
