updated card for wiigit

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="portfolio-container col-12 col-md-5 p-0">
-                    <img src="images/software/geometry.png" class="br-1 portfolio-image" alt="Wiigit">
+                    <img src="images/software/swirls.jpg" class="br-1 portfolio-image" alt="Wiigit">
                     <div class="p-4">
                         <h2>Wiigit</h2>
                         <hr class="header-underline mb-3">
