--- a/templates/contact.html
+++ b/templates/contact.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea class="form-control" id="message" name="message" rows="3" placeholder="Write me a message..." required></textarea>
+                        <textarea class="form-control" style="resize: none; height: 10rem;" id="message" name="message" rows="3" placeholder="Write me a message..." required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send me a message</button>
                 </form>
