updated small things

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column flex-lg-row gap-x-3">
-    <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center position-lg-sticky top-16">
+    <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center animate__animated animate__fadeIn">
         <div class="portfolio-filter" style="min-width: 18rem;">
             <h4>Explore My Portfolio</h4>
             <p style="max-width: 20rem;" class="mb-4">Discover my diverse range of projects, showcasing my skills in <span class="text-primary">software development</span>, <span class="text-primary">logo design</span>, <span class="text-primary">web development</span>, and <span class="text-primary">user experience design</span>.</p>
