--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column flex-lg-row gap-x-3">
-    <div class="d-flex portfolio-container h-100 flex-column align-items-center position-lg-sticky top-16">
+    <div class="d-flex portfolio-container h-100 flex-column align-items-center animate__animated animate__fadeIn">
         <div class="portfolio-container p-0 overflow-hidden mb-4">
             <img src="images/profile.jpg" class="br-1" alt="Profile Picture" style="width: 200px; height: 200px;">
         </div>
@@ -12,27 +12,27 @@
 
         <div class="d-flex flex-column flex-nowrap gap-3 justify-content-start">
             <div class="d-flex flex-row flex-nowrap align-items-center mb-3" style="width: 100%;">
-                <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
+                <div class="portfolio-container p-3 mr-3 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
                     <i class="icon ion-md-mail text-primary icon-md"></i>
                 </div>
                 <div>
                     <p class="text-primary mb-0 small mb-2" >EMAIL</p>
-                    <p class="text-secondary mb-0 fs-14">dylanlandman@gmail.com</p>
+                    <a href="mailto:dylandman287@gmail.com" class="text-secondary mb-0 fs-14">dylandman287@gmail.com</a>
                 </div>
             </div>
 
             <div class="d-flex flex-row flex-nowrap align-items-center mb-3">
-                <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
+                <div class="portfolio-container p-3 mr-3 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
                     <i class="icon ion-md-call text-primary icon-md"></i>
                 </div>
                 <div>
                     <p class="text-primary mb-0 small mb-2">PHONE #</p>
-                    <p class="text-secondary mb-0 fs-14">+1 (516) 514-2959</p>
+                    <a href="tel:+15165142959" class="text-secondary mb-0 fs-14">+1 (516) 514-2959</a>
                 </div>
             </div>
 
             <div class="d-flex flex-row flex-nowrap align-items-center">
-                <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
+                <div class="portfolio-container p-3 mr-3 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
                     <i class="icon ion-md-pin text-primary icon-md"></i>
                 </div>
                 <div>
