--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column flex-lg-row gap-x-3">
-    <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center position-sticky top-16">
+    <div class="d-none d-lg-flex portfolio-container h-100 flex-column align-items-center position-sticky top-16 animate__animated animate__fadeIn">
         <div class="portfolio-container p-0 overflow-hidden mb-4">
             <img src="../images/profile.jpg" class="br-1" alt="Profile Picture" style="width: 200px; height: 200px;">
         </div>
@@ -12,27 +12,27 @@
 
         <div class="d-flex flex-column flex-nowrap gap-3 justify-content-start">
             <div class="d-flex flex-row flex-nowrap align-items-center mb-3" style="width: 100%;">
-                <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
+                <div class="portfolio-container p-3 mr-3 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
                     <i class="icon ion-md-mail text-primary icon-md"></i>
                 </div>
                 <div>
                     <p class="text-primary mb-0 small mb-2" >EMAIL</p>
-                    <p class="text-secondary mb-0 fs-14">dylanlandman@gmail.com</p>
+                    <a href="mailto:dylandman287@gmail.com" class="text-secondary mb-0 fs-14">dylandman287@gmail.com</a>
                 </div>
             </div>
 
             <div class="d-flex flex-row flex-nowrap align-items-center mb-3">
-                <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
+                <div class="portfolio-container p-3 mr-3 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
                     <i class="icon ion-md-call text-primary icon-md"></i>
                 </div>
                 <div>
                     <p class="text-primary mb-0 small mb-2">PHONE #</p>
-                    <p class="text-secondary mb-0 fs-14">+1 (516) 514-2959</p>
+                    <a href="tel:+15165142959" class="text-secondary mb-0 fs-14">+1 (516) 514-2959</a>
                 </div>
             </div>
 
             <div class="d-flex flex-row flex-nowrap align-items-center">
-                <div class="portfolio-container p-3 mr-2 mr-2 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
+                <div class="portfolio-container p-3 mr-3 mr-2 d-flex align-items-center justify-content-center" style="width: 3.5rem;">
                     <i class="icon ion-md-pin text-primary icon-md"></i>
                 </div>
                 <div>
@@ -44,9 +44,9 @@
     </div>
     <div class="portfolio-container w-100 animate__animated animate__backInUp">
         <div class="portfolio-container mb-4 p-0 br-1" style="overflow: hidden;">
-            <a href="https://www.google.com/maps/place/Hoboken,+NJ/@40.744121,-74.032354,14z/data=!3m1!4b1!4m5!3m4!1s0x89c250b5a4b3c5d3:0x3a2f4f3f6f7f8g9!8m2!3d40.744121!4d-74.032354" target="_blank" rel="noopener noreferrer">
+            <div class="portfolio-container p-0">
                 <img src="../images/hoboken.jpg" alt="Hoboken, NJ on Map" style="width: 100%; height: auto; max-height: 10rem; object-fit: cover;">
-            </a>
+            </div>
         </div>
         <div>
             <h1>Contact Me</h1>
@@ -89,7 +89,7 @@
                         <label for="message">Message</label>
                         <textarea class="form-control" style="resize: none; height: 10rem;" id="message" name="message" rows="3" placeholder="Write me a message..." required></textarea>
                     </div>
-                    <button type="submit" id="contact-form-button" class="btn btn-primary">Send me a message</button>
+                    <button type="submit" id="contact-form" class="btn btn-primary">Send me a message</button>
                 </form>
             </div>
         </div>
